# rules_rust

./: BUILD.bazel
.bazelci/: presubmit.yml
bindgen/: bindgen.bzl
cargo/cargo_build_script_runner/: bin.rs
docs/: BUILD.bazel  crate_universe.md  defs.md  flatten.md  rust_doc.md  rust_repositories.md  symbols.bzl
examples/: .bazelignore
examples/cc_binary/: BUILD.bazel  WORKSPACE.bazel  bin.cc  forward_allocator.c
examples/env_locations/: BUILD.bazel  build.rs  main.rs
rust/: defs.bzl  repositories.bzl  toolchain.bzl
rust/platform/: triple_mappings.bzl
rust/private/: repository_utils.bzl  rust.bzl  rustc.bzl  rustdoc_test.bzl  utils.bzl
test/unit/rustdoc/: rustdoc_lib.rs  rustdoc_nodep_lib.rs  rustdoc_unit_test.bzl
test/unit/stdlib/: stdlib.bzl
test/unit/toolchain_make_variables/: toolchain_make_variables_test.bzl
tools/rustdoc/: rustdoc_test_writer.rs
util/process_wrapper/: options.rs
